# With_Argus_Eyes

./: .gitignore  1_Get_items.py  1_Get_items_Orig.py  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.codex/environments/: environment.toml
configs/dataset/: 00_env.sh  01_get_items.sh  02_get_tags.sh  03_cleaning.sh  03_resolve_tag_qids.sh  04_cleaning.sh  04_wikipedia_parse.sh  05_get_tags_second_depth.sh  05_wikidata_desc.sh  05_wikipedia_parse.sh  05b_wikipedia_parse_extra.sh  06_final_cleaning.sh  06_get_tags_second_depth.sh  06_wikidata_desc.sh  07_build_all_related_tags.sh  07_build_all_relation_tags.sh  07_final_cleaning.sh  07_get_tags_second_depth.sh  08_add_unrelevants.sh  08_build_all_relation_tags.sh  09_add_unrelevants.sh  09_unrelevant_with_wiki.sh  10_clear_directories.sh  10_final_cleaning.sh  10_unrelevant_with_wiki.sh  README.md  run_all.sh
configs/training/: 08_embedding_rank.sh  09_analysis_rank.sh  10_embedding_rank.sh  10_rp_highlow_ratio.sh  10b_rp_highlow_ratio.sh  10c_avg_scores.sh  11_analysis_rank.sh  11_embedding_rank.sh  11_retrieval_bias_analysis.sh  12_analysis_rank.sh  12_retrieval_bias_polar.sh  12_rp_highlow_ratio.sh  12b_rp_highlow_ratio.sh  12c_avg_scores.sh  13_retrieval_bias_analysis.sh  13_rp_highlow_ratio.sh  13_score_label_context_pairs.sh  13b_rp_highlow_ratio.sh  13c_avg_scores.sh  14_retrieval_bias_analysis.sh  (+5 more)
data/: README.md
docs/: DATASET.md  MODELS.md  REPRODUCE.md
outputs/: README.md
tests/: test_cli_dataset.py  test_cli_training.py  test_import.py
utils/: __init__.py
(+175 files in other folders)
